[package]
name = "git"
version.workspace = true
license.workspace = true
repository.workspace = true
edition.workspace = true
rust-version.workspace = true
publish.workspace = true

[lib]
name = "git"
path = "src/git.rs"

[lints]
workspace = true

[features]
test = []

[dependencies]
anyhow = { workspace = true }
log = { workspace = true }
path = { workspace = true }
serde = { workspace = true }
sum_tree = { workspace = true }
util = { workspace = true }
