[package]
name = "git"
version.workspace = true
license.workspace = true
repository.workspace = true
edition.workspace = true
rust-version.workspace = true
publish.workspace = true

[lib]
name = "git"
path = "src/git.rs"

[lints]
workspace = true

[features]
test = []

[dependencies]
anyhow = { workspace = true }
futures = { workspace = true }
gpui = { workspace = true }
log = { workspace = true }
path = { workspace = true }
serde = { workspace = true }
sum_tree = { workspace = true }
util = { workspace = true }

[dev-dependencies]
fs = { workspace = true, features = ["test"] }
gpui = { workspace = true, features = ["test-support"] }
serde_json = { workspace = true }
util_macros = { workspace = true }
