[package]
name = "grammars"
license.workspace = true
authors.workspace = true
edition.workspace = true
publish.workspace = true

[lints]
workspace = true

[lib]
name = "grammars"
path = "src/grammars.rs"

[dependencies]
anyhow = { workspace = true }
language_core = { workspace = true }
rust-embed = { workspace = true }
toml = { workspace = true }
tree-sitter = { workspace = true, optional = true }
tree-sitter-html = { workspace = true, optional = true }
tree-sitter-json = { workspace = true, optional = true }
util = { workspace = true }

[features]
load-grammars = ["tree-sitter", "tree-sitter-html", "tree-sitter-json"]
test-support = ["load-grammars"]
