[package]
name = "grammars"
license.workspace = true
authors.workspace = true
edition.workspace = true
publish.workspace = true

[lib]
name = "grammars"
path = "src/grammars.rs"

[lints]
workspace = true

[dependencies]
anyhow = { workspace = true }
language_core = { workspace = true }
rust-embed = { workspace = true }
toml = { workspace = true }
tree-sitter = { workspace = true }
tree-sitter-html = { workspace = true }
tree-sitter-json = { workspace = true }
tree-sitter-xml = { workspace = true }
util = { workspace = true }
