[package]
name = "grammars"
version.workspace = true
license.workspace = true
repository.workspace = true
edition.workspace = true
rust-version.workspace = true
publish.workspace = true

[lib]
name = "grammars"
path = "src/grammars.rs"

[lints]
workspace = true

[dependencies]
anyhow = { workspace = true }
language_core = { workspace = true }
rust-embed = { workspace = true }
toml = { workspace = true }
tree-sitter = { workspace = true }
tree-sitter-html = { workspace = true }
tree-sitter-json = { workspace = true }
tree-sitter-xml = { workspace = true }
util = { workspace = true }
