[package]
name = "http_client"
license.workspace = true
authors.workspace = true
edition.workspace = true
publish.workspace = true

[lib]
name = "http_client"
path = "src/http_client.rs"

[lints]
workspace = true

[features]
test = []

[dependencies]
anyhow = { workspace = true }
bytes = { workspace = true }
futures = { workspace = true }
http = { workspace = true }
http-body = { workspace = true }
log = { workspace = true }
parking_lot = { workspace = true }
url = { workspace = true }
