[package]
name = "http_client"
version.workspace = true
license.workspace = true
repository.workspace = true
edition.workspace = true
rust-version.workspace = true
publish.workspace = true

[lib]
name = "http_client"
path = "src/http_client.rs"

[lints]
workspace = true

[features]
test = []

[dependencies]
anyhow = { workspace = true }
bytes = { workspace = true }
futures = { workspace = true }
http = { workspace = true }
http-body = { workspace = true }
log = { workspace = true }
parking_lot = { workspace = true }
url = { workspace = true }
