[package]
name = "icons"
version.workspace = true
license.workspace = true
repository.workspace = true
edition.workspace = true
rust-version.workspace = true
publish.workspace = true

[lib]
name = "icons"
path = "src/icons.rs"

[lints]
workspace = true

[dependencies]
gpui = { workspace = true }
serde = { workspace = true }
strum = { workspace = true }
