[package]
name = "input"
version.workspace = true
license.workspace = true
repository.workspace = true
edition.workspace = true
rust-version.workspace = true
publish.workspace = true

[lib]
name = "input"
path = "src/input.rs"

[lints]
workspace = true

[dependencies]
gpui = { workspace = true }
theme = { workspace = true }
ui = { workspace = true }
