[package]
name = "language"
license.workspace = true
authors.workspace = true
edition.workspace = true
publish.workspace = true

[lints]
workspace = true

[lib]
name = "language"
path = "src/language.rs"

[features]
test-support = ["gpui/test-support"]

[dependencies]
anyhow = { workspace = true }
clock = { workspace = true }
fs = { workspace = true }
gpui = { workspace = true }
settings = { workspace = true }
text = { workspace = true }
util = { workspace = true }
