[package]
name = "language_core"
license.workspace = true
authors.workspace = true
edition.workspace = true
publish.workspace = true

[lints]
workspace = true

[lib]
name = "language_core"
path = "src/language_core.rs"

[dependencies]
anyhow = { workspace = true }
gpui = { workspace = true }
regex = { workspace = true }
schemars = { workspace = true }
serde = { workspace = true }
toml = { workspace = true }
util = { workspace = true }
