[package]
name = "language_core"
license.workspace = true
authors.workspace = true
edition.workspace = true
publish.workspace = true

[lib]
name = "language_core"
path = "src/language_core.rs"

[lints]
workspace = true

[dependencies]
anyhow = { workspace = true }
gpui = { workspace = true }
log = { workspace = true }
parking_lot = { workspace = true }
regex = { workspace = true }
schemars = { workspace = true }
serde = { workspace = true }
toml = { workspace = true }
tree-sitter = { workspace = true }
util = { workspace = true }
