[package]
name = "languages"
version.workspace = true
license.workspace = true
repository.workspace = true
edition.workspace = true
rust-version.workspace = true
publish.workspace = true

[lib]
name = "languages"
path = "src/languages.rs"

[lints]
workspace = true

[dependencies]
grammars = { workspace = true }
language = { workspace = true }
