[package]
name = "logger"
license.workspace = true
authors.workspace = true
edition.workspace = true
publish.workspace = true

[lib]
name = "logger"
path = "src/logger.rs"

[lints]
workspace = true

[features]
default = []

[dependencies]
anyhow = { workspace = true }
jiff = { workspace = true }
log = { workspace = true }

[dev-dependencies]
fs = { workspace = true, features = ["test"] }
gpui = { workspace = true, features = ["test-support"] }
