[package]
name = "logger"
version.workspace = true
license.workspace = true
repository.workspace = true
edition.workspace = true
rust-version.workspace = true
publish.workspace = true

[lib]
name = "logger"
path = "src/logger.rs"

[lints]
workspace = true

[features]
default = []

[dependencies]
anyhow = { workspace = true }
jiff = { workspace = true }
log = { workspace = true }

[dev-dependencies]
fs = { workspace = true, features = ["test"] }
gpui = { workspace = true, features = ["test-support"] }
