[package]
name = "metadata"
version.workspace = true
license.workspace = true
repository.workspace = true
edition.workspace = true
rust-version.workspace = true
publish.workspace = true

[lib]
name = "metadata"
path = "src/metadata.rs"

[lints]
workspace = true

[build-dependencies]
serde = { workspace = true }
toml = { workspace = true }
