[package]
name = "migrator"
version.workspace = true
license.workspace = true
repository.workspace = true
edition.workspace = true
rust-version.workspace = true
publish.workspace = true

[lib]
name = "migrator"
path = "src/migrator.rs"

[lints]
workspace = true

[dependencies]
anyhow = { workspace = true }
serde_json = { workspace = true }
settings_jsonc = { workspace = true }

[dev-dependencies]
indoc = { workspace = true }
pretty_assertions = { workspace = true }
