[package]
name = "multi_buffer"
version.workspace = true
license.workspace = true
repository.workspace = true
edition.workspace = true
rust-version.workspace = true
publish.workspace = true

[lib]
name = "multi_buffer"
path = "src/multi_buffer.rs"

[lints]
workspace = true

[dependencies]
gpui = { workspace = true }
language = { workspace = true }
text = { workspace = true }

[dev-dependencies]
gpui = { workspace = true, features = ["test-support"] }
indoc = { workspace = true }
rand = { workspace = true }
text = { workspace = true, features = ["test-support"] }
