[package]
name = "path"
version.workspace = true
license.workspace = true
repository.workspace = true
edition.workspace = true
rust-version.workspace = true
publish.workspace = true

[lib]
name = "path"
path = "src/path.rs"

[lints]
workspace = true

[features]
test = []

[dependencies]
anyhow = { workspace = true }
dirs = { workspace = true }
dunce = { workspace = true }
serde = { workspace = true }

[target.'cfg(target_os = "windows")'.dependencies]
tendril = { workspace = true }

[dev-dependencies]
pretty_assertions = { workspace = true }
