[package]
name = "picker"
version.workspace = true
license.workspace = true
repository.workspace = true
edition.workspace = true
rust-version.workspace = true
publish.workspace = true

[lib]
name = "picker"
path = "src/picker.rs"

[lints]
workspace = true

[dependencies]
actions = { workspace = true }
anyhow = { workspace = true }
gpui = { workspace = true }
input = { workspace = true }
log = { workspace = true }
theme = { workspace = true }
ui = { workspace = true }
workspace = { workspace = true }
