[package]
name = "platform_title_bar"
license.workspace = true
authors.workspace = true
edition.workspace = true
publish.workspace = true

[lib]
name = "platform_title_bar"
path = "src/platform_title_bar.rs"

[lints]
workspace = true

[dependencies]
actions = { workspace = true }
gpui = { workspace = true }
smallvec = { workspace = true }
theme = { workspace = true }
ui = { workspace = true }

[target.'cfg(target_os = "windows")'.dependencies]
windows = { workspace = true }
