[package]
name = "project"
license.workspace = true
authors.workspace = true
edition.workspace = true
publish.workspace = true

[lints]
workspace = true

[lib]
name = "project"
path = "src/project.rs"

[[test]]
name = "integration"
path = "tests/integration/project_tests.rs"
required-features = ["test-support"]

[features]
test-support = ["gpui/test-support"]

[dependencies]
anyhow = { workspace = true }
fs = { workspace = true }
futures = { workspace = true }
gpui = { workspace = true }
tokio = { workspace = true }
util = { workspace = true }
worktree = { workspace = true }

[dev-dependencies]
fs = { workspace = true, features = ["test-support"] }
gpui = { workspace = true, features = ["test-support"] }
indoc = { workspace = true }
serde_json = { workspace = true }
util = { workspace = true, features = ["test-support"] }
util_macros = { workspace = true }
