[package]
name = "project"
version.workspace = true
license.workspace = true
repository.workspace = true
edition.workspace = true
rust-version.workspace = true
publish.workspace = true

[lib]
name = "project"
path = "src/project.rs"

[lints]
workspace = true

[[test]]
name = "project_tests"
path = "tests/integration/project_tests.rs"
required-features = ["test"]

[features]
test = ["gpui/test-support", "language/test"]

[dependencies]
anyhow = { workspace = true }
fs = { workspace = true }
futures = { workspace = true }
gpui = { workspace = true }
language = { workspace = true }
log = { workspace = true }
path = { workspace = true }
request_buffer = { workspace = true }
text = { workspace = true }
tokio = { workspace = true }
util = { workspace = true }
worktree = { workspace = true }

[dev-dependencies]
fs = { workspace = true, features = ["test"] }
gpui = { workspace = true, features = ["test-support"] }
indoc = { workspace = true }
path = { workspace = true, features = ["test"] }
serde_json = { workspace = true }
util = { workspace = true, features = ["test"] }
util_macros = { workspace = true }
