[package]
name = "project_panel"
license.workspace = true
authors.workspace = true
edition.workspace = true
publish.workspace = true

[lints]
workspace = true

[lib]
name = "project_panel"
path = "src/project_panel.rs"

[dependencies]
actions = { workspace = true }
anyhow = { workspace = true }
editor = { workspace = true }
gpui = { workspace = true }
project = { workspace = true }
smallvec = { workspace = true }
theme = { workspace = true }
ui = { workspace = true }
util = { workspace = true }
workspace = { workspace = true }

[dev-dependencies]
fs = { workspace = true, features = ["test-support"] }
gpui = { workspace = true, features = ["test-support"] }
indoc = { workspace = true }
request_editor = { workspace = true }
serde_json = { workspace = true }
settings = { workspace = true, features = ["test-support"] }
util = { workspace = true, features = ["test-support"] }
util_macros = { workspace = true }
workspace = { workspace = true, features = ["test-support"] }
